--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <script>
                   document.addEventListener("DOMContentLoaded", function () {
                         const keywords = [
-                              "Casa L’Ellit", "Salão de Beleza", "Estética", "Campinas", "Noivas",
+                              "Casa L’Ellit", "Salão de Beleza", "Estética", "Noivas",
                               "Formatura", "Mechas", "Cuidados com a pele Campinas", "Transformação de Imagem",
                               "Beleza Exclusiva Campinas", "Coloração", "Reflexo", "Mechas", "Coloração raiz",
                               "Henna", "Tratamento", "Proteção Plex", "Hidratação", "Reconstrução",
@@ -200,7 +200,7 @@
                         ];
                         let index = 0;
                         setInterval(function () {
-                              document.title = keywords[index] + " - Campinas";
+                              document.title = keywords[index] + " - Campinas/SP";
                               index = (index + 1) % keywords.length;
                         }, 3000); // Troca o título a cada 3 segundos
                   });
